<resources>
    <string name="app_name">Extended Profile</string>
    <string name="server_error_invalid_userId">Invalid Username!!!</string>
    <string name="android_api_version">Invalid android_api_version!!!</string>
    <string name="server_error_invalid_userId_and_password">Invalid User Id or Password!!!</string>
    <string name="server_error_invalid_AppVersion">Invalid APP Version !!!</string>
    <string name="server_error__AppVersion">App Version!</string>
    <string name="update">Update</string>
    <string name="block_not_assigned">Block is not assigned on this ID.</string>
    <string name="openDrawer">Drawer Open</string>
    <string name="scan_aadharh">Scan Aadhar Card</string>
    <string name="scan_bank">Bank Details</string>
    <string name="closeDrawer">Drawer Close</string>
    <string name="selectGramPanchyt">Select Gram Panchyt</string>
    <string name="kyc_doc_type">Select KYC Doc type</string>
    <string name="selectVillage">Select Village</string>
    <string name="blockName">Block Name:</string>
    <string name="enterAadharMsg">Enter Your Aadhar Details</string>
    <string name="uploade_msg">Upload filled consent form</string>
    <string name="loading">Loading...</string>
    <string name="scan_brcd">Scan a barcode</string>
    <string name="gpsMsg">GPS is not on. Go to settings menu?</string>
    <string name="gotoSetting">Go to setting</string>
    <string name="enterValidAccMsg">Enter valid Account Number</string>
    <string name="enter">Enter </string>
    <string name="enterDigitMsg"> digit Account Number</string>
    <string name="error_acc_length">Account Number length is too short.</string>
    <string name="accountNoIsWrong"> The account number does not match! Please check and enter again</string>
    <string name="scanBarCode">Scan barcode,press volume up button for torch</string>
    <string name="fillAddharDetail">Fill Aadhaar number First!!!</string>
    <string name="fillAccountDetail">Fill Account number First!!!</string>
    <string name="error_uploade_concent">Please uploade filled consent form!!!</string>
    <string name="error_file_size">Please uploade concent form file with size upto 115KB!</string>
    <string name="enterValidMobile">Enter Valid Mobile Number!!!</string>
    <string name="enter_postalcode">Enter Postal Code</string>
    <string name="enterErongAadhar">Entred UID(Aadhar No) is wrong.</string>
    <string name="takePassbookPhoto">Take Paasbook photo First!!!</string>
    <string name="SERVER_ERROR_MESSAGE">Internal server error.</string>
    <string name="aadhar_seeded_acc">Aadhaar Seeded A/C</string>
    <string name="insurance_coverage_pmjjy">Enrolled in PMJJBY</string>
    <string name="insurance_coverage_pmsby">Enrolled in PMSBY</string>
    <string name="insurance_coverage_life">Enrolled in life insurance</string>
    <string name="insurance_coverage_pension">Enrolled in the Pension Scheme(APY)</string>
    <string name="date_of_joining">Date of Joining<font color='#FFFF1100'>*</font><i><font color='#FFFF1100' size='10'> (dd-mm-yyy)</font></i> </string>
    <string name="personal_detail">Personal Details</string>
    <string name="bank_detail_member">Bank Details</string>
    <string name="insurance_coverage">Insurance Coverages</string>
    <string name="bottom_text">Design, hosted and maintained by NIC,Content provided by MORD.</string>
    <string name="user_id">User Id</string>
    <string name="kyc_doc_id">Enter document Id</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="logout">Logout</string>
    <string name="server_error_dialog">Server Error!</string>
    <string name="NO_INTERNET_TITLE">No Internet!</string>
    <string name="SERVER_ERROR_TITLE">Server Error!</string>
    <string name="INTERNET_MESSAGE">Please, open your internet connection.</string>
    <string name="server_error_msg">Server Error!!!</string>
    <string name="slow_internet">Slow Internet!!!</string>
    <string name="no_internet_dialog">No Internet!</string>
    <string name="goto_internet_setting">Setting</string>
    <string name="aadhar_link_status">Aadhar is linked.</string>
    <string name="kyc_heading">Upgrade SHG profile</string>
    <string name="status">Status</string>
    <string name="change_status">Change Status</string>
    <string name="status_active">Active</string>
    <string name="status_inactive">Inactive</string>
    <string name="member_form">SHG Member Form</string>
    <string name="KYC_Verified">KYC Completed</string>
    <string name="member_Verified">Member added</string>
    <string name="unsync_details">UnSync Details:</string>
    <string name="sync_data">Sync Data</string>
    <string name="unsync_aadhar">Aadhaars</string>
    <string name="unsync_bankAcc">Bank Accounts</string>
    <string name="unsync_add_member">Added Members</string>
    <string name="unsync_kyc_doc">KYC Doc</string>
    <string name="unsynced_modified_member">Modified Members</string>
    <string name="unsynced_modified_shg">Modified SHG</string>
    <string name="bank_details">Bank Account</string>
    <string name="unsync_aadhar_count"></string>
    <string name="unsync_account_count"></string>
    <string name="unsync_member_count" translatable="false">""</string>
    <string name="unsync_kycdoc_count" translatable="false">""</string>
    <string name="unsyncedMembers" translatable="false">""</string>
    <string name="unsyncedshgs" translatable="false">""</string>
    <string name="title">Aadhar Scanner Functions</string>
    <string name="contact_us">Contact Us</string>
    <string name="save">Save</string>
    <string name="back">Back</string>
    <string name="data_save_msg">Data Save Successfully.</string>
    <string name="data_sync_msg">Data Synced Successfully.</string>
    <string name="syncing_data">Syncing data...</string>
    <string name="bank_acc_link_status">Bank Account details are captured.</string>
    <string name="info">Info</string>
    <string name="shg_is">Confirmation is</string>
    <string name="member_is">Confirmation is</string>
    <string name="shg_inactive_msg">and no action can not be perform on this.</string>
    <string name="login_attempts_msgS">You have only</string>
    <string name="login_attempts_msgE">login attempts left.</string>
    <string name="pending_status">Marked as inactive</string>
    <string name="rejected_status">Rejected</string>
    <string name="accepted">Accepted</string>
    <string name="no_data_found">No data found!!!</string>
    <string name="communicate_to_server">First fetch the data from the server in online mood.</string>
    <string name="error_status">Member is inactive.</string>
    <string name="error_leadership">is already exist in the group.Please select another designation!</string>
    <string name="error_userId">Invalid userId!</string>
    <string name="error_password">Invalid password!</string>
    <string name="error_name">Invalid entered name!</string>
    <string name="error_Fname">Invalid entered father name!</string>
    <string name="error_yob">Enter date of birth!</string>
    <string name="error_address">Enter your aadhar address!</string>
    <string name="error_doc_id">Invalid document id!</string>
    <string name="error_bank_branch">Select bank branch</string>
    <string name="error_aadhar_details_wrong">Entered aadhar details are wrong. </string>
    <string name="error_uidai_id">Enter UIADI Number</string>
    <string name="error_mobile">Please, enter valid mobile number</string>
    <string name="error_gender">Enter only M->Male or F->Female or T->Transgender</string>
    <string name="error_other_edu">Please specify other education</string>
    <string name="server_error_device_info">Device Error!</string>
    <string name="error_secc_no">Select Secc number first.</string>
    <string name="server_error_device_info_massege">You have changed or updated your device</string>
    <string name="server_error_invalid_id_or_password_massege">Invalid UserId and Password!</string>
    <string name="AADHAR_API_VOLLEY_ERROR">Aadhar sync data failed, try again!</string>
    <string name="BANK_ACC_API_VOLLEY_ERROR">Bank Account sync data  failed, try again!</string>
    <string name="ADD_MEMBER_API_VOLLEY_ERROR">Add Members sync data  failed, try again!</string>
    <string name="KYC_DOC_API_VOLLEY_ERROR">KYC document sync data  failed, try again!</string>
    <string name="KYC_DOC_sync">KYC document sync!</string>
    <string name="SHG_INACTIVE_API_VOLLEY_ERROR">SHG inactivation sync data  failed, try again!</string>
    <string name="Member_INACTIVE_API_VOLLEY_ERROR">Member inactivation sync data  failed, try again!</string>
    <string name="sync_data_failed">Data Sync Failed, Please try again!</string>
    <string name="error_cridential_block">Please wait until your credential unblock.</string>
    <string name="error_add_member_limit_exceed">SHG add member limit exceeded, You can not add more member </string>
    <string name="toast_exit_app">Tap back once more to exit.</string>
    <string name="toast_aadhar_bank_marked">Aadhar and Bank both marked as verified</string>
    <string name="toast_aadhar_bank_linked">Aadhar and Bank both  details are linked</string>
    <string name="toast_vill_not_assigned">Villages are Not assigned.</string>
    <string name="toast_gp_not_assigned">Gram Panchayats are Not assigned.</string>
    <string name="toast_block_not_assigned">Blocks are Not assigned.</string>
    <string name="toast_error_member_photo">Take the member photo first!!!</string>
    <string name="toast_error_passbook_photo">Take the Bank Passbook photo first!!!</string>
    <string name="toast_error_front_photo">Front image result has been canceled, try again!</string>
    <string name="toast_error_back_photo">Back image result has been canceled, try again!</string>
    <string name="toast_document_exists">Document already Exist.</string>
    <string name="toast_take_front_image">Please add document image.</string>
    <string name="toast_take_back_image">Please add document back side image.</string>
    <string name="Enter_aadhar_number">Enter 12 digit aadhar number</string>
    <string name="name_as_per_aadhar">Name as per aadhar</string>
    <string name="gender">Gender(M/F/T)</string>
    <string name="father_name">Father Name</string>
    <string name="year_of_birth">Date/Year Of Birth</string>
    <string name="Address">Address</string>
    <string name="submit_aadhar_details">submit aadhar details</string>
    <string name="go_to_aadhar_details">Go To aadhar Detail</string>
    <string name="go_to_account_details">go to account details</string>
    <string name="cancel">Cancel</string>
    <string name="qr_code_scanner">QR CODE SCANNER</string>
    <string name="ok">Ok</string>
    <string name="kyc">KYC Doc</string>
    <string name="this_is_not_uidai_compliance_qr">This is not a UIDAI compliance QR code</string>
    <string name="fill_your_aadhar_and_bank_account">Fill your Aadhar and bank account details</string>
    <string name="go_to_shg_list">Go To SHG List</string>
    <string name="home">Home</string>
    <string name="change_language">Change language</string>
    <string name="details_on_this_selected_location">Details on this selected location</string>
    <string name="Number_of_total_shg">Number of Total SHG </string>
    <string name="total_number_of_shg_member">Total Number of SHG Members </string>
    <string name="total_number_of_member_linked_aadhar_card">Total number of Member linked aadhar card </string>
    <string name="total_number_of_member_pending_for_aadhar_linked">Total number of Member Pending for aadhar linked </string>
    <string name="total_number_of_pending_bank_account_linked">Total number of Member pending for bank account linked </string>
    <string name="otp_creation">OTP Creation</string>
    <string name="enter_mobile">Enter Your Mobile Number</string>
    <string name="send_otp">Send OTP</string>
</resources>