<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <group
        android:id="@+id/group1"
        android:checkableBehavior="single">

        <item
            android:id="@+id/menu_dashbord"
            android:checked="true"
            app:itemTextColor="@color/colorBlack"
            app:itemIconTint="@color/colorBlack"
            android:icon="@drawable/ic_home_24"
            android:title="@string/home"/>

        <item
            android:id="@+id/kyc"
            android:checked="true"
            app:itemTextColor="@color/colorBlack"
            app:itemIconTint="@color/colorBlack"
            android:icon="@drawable/ic_kyc_doc_24"
            android:title="@string/kyc" />

        <item
            android:id="@+id/change_language"
            android:checked="true"
            app:itemTextColor="@color/colorBlack"
            app:itemIconTint="@color/colorBlack"
            android:icon="@drawable/ic_language_black_24dp"
            android:title="@string/change_language" />

        <item
            android:checked="true"
            android:id="@+id/contact_us"
            android:icon="@drawable/contact_us"
            android:title="@string/contact_us" />

        <item
            android:id="@+id/menu_logout"
            android:checked="true"
            android:icon="@drawable/ic_exit_to_app_black_24dp"
            android:title="@string/logout" />

    </group>


</menu>