<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:background="@color/colorPrimaryDark">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:textColor="@color/colorWhite"
            android:gravity="center_horizontal"
            android:text="@string/fill_your_aadhar_and_bank_account"
            android:textSize="@dimen/text_size_20SP"
            android:textStyle="bold"/>



        <!-- <ImageView
             android:layout_width="50dp"
             android:layout_height="50dp"
             android:layout_centerInParent="true"
             android:background="@drawable/ic_success" />-->

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <!-- <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="Success"
             android:textAlignment="center"
             android:textAppearance="@style/TextAppearance.AppCompat.Headline" />
 -->
        <!--<TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla eu erat tincidunt lacus fermentum rutrum."
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium" />
-->

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/goToAadharForm"
            android:visibility="gone"
            style="@style/CommonButton"
            android:text="@string/go_to_aadhar_details"
            android:layout_alignParentBottom="true" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/goToAccountDetailForm"
            style="@style/CommonButton"
            android:visibility="gone"
            android:text="@string/go_to_account_details"
            android:layout_alignParentBottom="true" />
        <Button
            android:id="@+id/buttonOk"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="15dp"
            android:background="@drawable/button_background"
            android:text="@string/cancel"
            android:textColor="@color/colorPrimaryDark" />

    </LinearLayout>

</LinearLayout>