<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="@dimen/dimen_300"
    android:layout_height="@dimen/dimen_300"
    android:orientation="vertical"
    android:background="@drawable/border_of_button"
   >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/otp_creation"
        android:textColor="@color/colorBlack"
        android:textSize="@dimen/dimen_20"
        android:layout_gravity="center"
        android:textStyle="bold" />
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/space5dp"
        android:layout_marginTop="@dimen/dimen_30"
        android:layout_marginLeft="@dimen/dimen_15"
        android:layout_marginRight="@dimen/dimen_15"
        android:background="@drawable/border_of_button"
        android:hint="@string/enter_mobile">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/mobileNoET"
            android:layout_margin="@dimen/space5dp"
            android:lines="1"
            android:maxLength="10"
            android:textColor="@color/colorBlack"
            android:textColorHint="@color/colorBoxDark"
            android:textSize="@dimen/textSize18"
            android:inputType="number"/>

    </com.google.android.material.textfield.TextInputLayout>

   <LinearLayout
       android:layout_width="match_parent"
       android:layout_height="match_parent"
       android:gravity="center">



        <Button
            android:id="@+id/send_otpBTN"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="@dimen/dimen_2"
            android:textStyle="bold"
            android:background="@color/colorPrimaryDark"
            android:text="@string/send_otp"
            android:textColor="@color/colorBoxDark" />

   </LinearLayout>


</LinearLayout>